--- a/docs/security/unlock-user-accounts.mdx
+++ b/docs/security/unlock-user-accounts.mdx
@@ -11,7 +11,7 @@ This feature is applicable to user accounts that use [passwords](https://dashboa
 
 Users with admin roles can override lockouts through the Clerk Dashboard.
 
-1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **[Users](https://dashboard.clerk.com/last-active?path=users)**.
+1. In your Clerk Dashboard, navigate to **[Users](https://dashboard.clerk.com/last-active?path=users)**.
 2. Locate the locked user by looking for a "locked" badge next to their username/email. 
 3. Open the admin menu (three little dots).
 4. Select "Unlock" to unlock the user account.
