--- a/docs/security/user-lock-guide.mdx
+++ b/docs/security/user-lock-guide.mdx
@@ -5,7 +5,7 @@ description: User information is aprime target for malicious activity. Clerk pro
 
 # Brute force attacks and locking user accounts
 
-User accounts are a vector for malicious attacks for many reasons from impersonation to collecting personally identifiable information (PII). One method is a "brute force" attack, where a script will attempt many different passwords to log into an account. One line of defense against these attacks is to temporarily deny attempts to log into accounts that attempt too many failed logins in a short period of time. Locking out login attempts disrupts the attack and makes the account a less attractive target.
+User accounts are a vector for malicious attacks for many reasons, from impersonation to collecting personally identifiable information (PII). One method is a "brute force" attack, where a script will attempt many different passwords to log into an account. One line of defense against these attacks is to temporarily deny attempts to log into accounts that attempt too many failed logins in a short period of time. Locking out login attempts disrupts the attack and makes the account a less attractive target.
 
 ## How Clerk protects against brute force attacks
 
