--- a/docs/security/unlock-user-accounts.mdx
+++ b/docs/security/unlock-user-accounts.mdx
@@ -13,7 +13,7 @@ Users with admin roles can override lockouts through the Clerk Dashboard.
 
 1. In your Clerk Dashboard, navigate to **[Users](https://dashboard.clerk.com/last-active?path=users)**.
 2. Locate the locked user by looking for a "locked" badge next to their username/email. 
-3. Open the admin menu (three little dots).
+3. Open the admin menu by selecting the icon that looks like three stacked dots.
 4. Select "Unlock" to unlock the user account.
 
 <Images
