--- a/docs/security/user-lock-guide.mdx
+++ b/docs/security/user-lock-guide.mdx
@@ -15,7 +15,7 @@ User accounts are a vector for malicious attacks for many reasons, from imperson
 
 If the maximum allowed attempts are reached, the user will be locked out from signing in again until the lockout duration lapses. Lockout can also be [configured to never expire](/docs/security/customize-user-lockout#lock-a-user-account-forever-until-an-admin-unlocks-the-account), in which case the user will not be able to sign in unless an admin unlocks them.
 
-An admin can [unlock a user before the expiry of the lockout period via the Clerk dashboard](/docs/security/unlock-user-accounts).
+An admin can [unlock a user before the expiry of the lockout period via the Clerk Dashboard](/docs/security/unlock-user-accounts).
 
 ### Defaults
 
