--- a/docs/security/unlock-user-accounts.mdx
+++ b/docs/security/unlock-user-accounts.mdx
@@ -23,7 +23,7 @@ src="/docs/images/security/userlock_dashboard.png"
 alt=" "
 />
 
-Alternatively, you can unlock a user's account on their profile page by scrolling to the "Unlock user" section and selecting "Unlock user."
+Alternatively, you can unlock a user's account on their profile page. Click on the user's row to be taken to their profile page, then scroll to the "Unlock user" section, and select "Unlock user."
 
 <Images
 width={1512}
