--- a/docs/security/user-lock-guide.mdx
+++ b/docs/security/user-lock-guide.mdx
@@ -23,7 +23,7 @@ By default, Clerk applications will lock user accounts after 100 failed login at
 
 ## What a locked out user sees
 
-When a user exceeds the maximum login attempts, the Clerk [`<SignIn />`](/docs/components/authentication/sign-in) component will inform them how long they've been locked out and to contact support for more information.
+When a user exceeds the maximum login attempts, the Clerk [`<SignIn />`](/docs/components/authentication/sign-in) component will inform them of how long they have been locked out for and to contact support for more information.
 
 <Images
 width={1512}
