--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -23,10 +23,10 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
     }
   ]}
 >
-- Use Clerk with React
+- Set up a React app with Vite
 - Install `@clerk/clerk-react`
 - Set environment keys
-- Wrap your app in `<ClerkProvider />`
+- Wrap your React app in `<ClerkProvider />`
 - Embed the `<UserButton />` and `<SignInButton />`
 </TutorialHero>
 
