--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -38,7 +38,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 <Steps>
 
-### Install React using Vite
+### Set up a React application using Vite
 
 We don't recommend using `create-react-app` for scaffoling your new React application. Instead we recommend using Vite to setup your application. 
 
