--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -69,7 +69,7 @@ We don't recommend using `create-react-app` for scaffoling your new React applic
 
 ### Install `@clerk/clerk-react`
 
-Clerk's React SDK gives you access to prebuilt components, hooks, and helpers for React. Install it by running the following command in your terminal:
+Clerk's React SDK gives you access to prebuilt [components](/docs/components/overview), [hooks](/docs/references/react/use-user), and helpers for React. Install it by running the following command in your terminal:
 
 <CodeBlockTabs type="installer" options={["npm", "pnpm", "yarn" ]}>
   ```bash filename="terminal"
