--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -122,6 +122,8 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
     </ClerkProvider>
   </React.StrictMode>,
 )
+
+At this point, your application should use Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box. Start your React application via `npm run dev`, visit `http://localhost:5173`, and sign up to get access to your application. 
 ```
 ### Embed the `<UserButton />` and `<SignInButton />`
 
