--- a/docs/references/react/add-react-router.mdx
+++ b/docs/references/react/add-react-router.mdx
@@ -1,5 +1,5 @@
 ---
-title: Add React Router
+title: Add React Router to your Clerk powered React application
 description: Learn how to add React Router to your React application using their Data API router.
 ---
 
