--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -42,7 +42,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 We don't recommend using `create-react-app` for scaffoling your new React application. Instead we recommend using Vite to setup your application. 
 
-<CodeBlockTabs type="installer" options={["npm", "pnpm", "yarn"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm create vite@latest clerk-react -- --template react-ts
   cd clerk-react
@@ -52,18 +52,19 @@ We don't recommend using `create-react-app` for scaffoling your new React applic
   ```
 
   ```bash filename="terminal"
+  yarn create vite clerk-react--template react-ts
+  cd clerk-react
+  yarn install
+  yarn dev
+  ```
+
+  ```bash filename="terminal"
   pnpm create vite clerk-react --template react-ts
   cd clerk-react
   pnpm install
   pnpm dev
   ```
 
-  ```bash filename="terminal"
-  yarn create vite clerk-react--template react-ts
-  cd clerk-react
-  yarn install
-  yarn dev
-  ```
 </CodeBlockTabs>
 
 
