--- a/docs/security/user-lock-guide.mdx
+++ b/docs/security/user-lock-guide.mdx
@@ -21,6 +21,8 @@ An admin can [unlock a user before the expiry of the lockout period via the Cler
 
 By default, Clerk applications will lock user accounts after 100 failed login attempts and require a one hour cool down period before anyone can attempt to log into that account again. (While 100 attempts may seem like a lot to a human, it is very easy to reach this maximum for a bot!)
 
+You can [customize the number of times a login can be attempted before the account is locked, and how long lockouts last.](/docs/security/customize-user-lockout)
+
 ## What a locked out user sees
 
 When a user exceeds the maximum login attempts, the Clerk [`<SignIn />`](/docs/components/authentication/sign-in) component will inform them of how long they have been locked out for and to contact support for more information.
