--- a/docs/security/unlock-user-accounts.mdx
+++ b/docs/security/unlock-user-accounts.mdx
@@ -23,7 +23,12 @@ src="/docs/images/security/userlock_dashboard.png"
 alt=" "
 />
 
-Alternatively, you can unlock a user's account on their profile page. Click on the user's row to be taken to their profile page, then scroll to the "Unlock user" section, and select "Unlock user."
+Alternatively, you can unlock a user's account on their profile page. 
+
+1. In your Clerk Dashboard, navigate to **[Users](https://dashboard.clerk.com/last-active?path=users)**.
+2. Locate the locked user by looking for a "locked" badge next to their username/email. 
+3. Click on the user's row to be taken to their profile page.
+4. Scroll to the **Unlock user** section, and select **Unlock user".
 
 <Images
 width={1512}
