update screenshots; optimized as webp

--- a/docs/security/unlock-user-accounts.mdx
+++ b/docs/security/unlock-user-accounts.mdx
@@ -19,7 +19,7 @@ Users with admin roles can override lockouts through the Clerk Dashboard.
 <Images
 width={1512}
 height={914}
-src="/docs/images/security/userlock_dashboard.png"
+src="/docs/images/security/userlock_dashboard.webp"
 alt=" "
 />
 
@@ -33,6 +33,6 @@ Alternatively, you can unlock a user's account on their profile page.
 <Images
 width={1512}
 height={914}
-src="/docs/images/security/userlock_profile.png"
+src="/docs/images/security/userlock_profile.webp"
 alt=" "
 />
