--- a/docs/security/customize-user-lockout.mdx
+++ b/docs/security/customize-user-lockout.mdx
@@ -19,7 +19,7 @@ This feature is applicable to user accounts that use [passwords](https://dashboa
 <Images
 width={1512}
 height={914}
-src="/docs/images/security/userlock_custom-attempts-and-duration.png"
+src="/docs/images/security/userlock_custom-attempts-and-duration.webp"
 alt=" "
 />
 
@@ -32,6 +32,6 @@ alt=" "
 <Images
 width={1512}
 height={914}
-src="/docs/images/security/userlock_indefinite.png"
+src="/docs/images/security/userlock_indefinite.webp"
 alt=" "
 />
