--- a/docs/security/customize-user-lockout.mdx
+++ b/docs/security/customize-user-lockout.mdx
@@ -14,7 +14,7 @@ This feature is applicable to user accounts that use [passwords](https://dashboa
 1. In your Clerk Dashboard, navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
 2. To change the number of failed attempts before a user is locked out, under **Maximum attempt limit,** enter a new number of failed attempts allowed. (The default is 100 attempts.)
 3. To change the duration, under **Lockout duration,** select "Time limit," select the unit of time (minutes/hours/days/years), and enter the number of units you want lockouts to last.
-4. Select "Save changes" to apply your settings.
+4. Select **Save changes** to apply your settings.
 
 <Images
 width={1512}
