--- a/docs/security/customize-user-lockout.mdx
+++ b/docs/security/customize-user-lockout.mdx
@@ -26,7 +26,7 @@ alt=" "
 ## Lock a user account forever until an admin unlocks the account
 
 1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
-2. Under **Lockout duration,** select "Indefinite Lockout."
+2. Under **Lockout duration,** select **Indefinite Lockout**.
 3. Select "Save changes" to apply your settings.
 
 <Images
