--- a/docs/security/customize-user-lockout.mdx
+++ b/docs/security/customize-user-lockout.mdx
@@ -27,7 +27,7 @@ alt=" "
 
 1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
 2. Under **Lockout duration,** select **Indefinite Lockout**.
-3. Select "Save changes" to apply your settings.
+3. Select **Save changes** to apply your settings.
 
 <Images
 width={1512}
