updates grammar, etc

--- a/docs/security/programmatically-lock-user-accounts.mdx
+++ b/docs/security/programmatically-lock-user-accounts.mdx
@@ -9,9 +9,9 @@ description: Lock users to prevent them from signing in based on your own custom
 
 You can programmatically unlock a user using the [UnlockUser](https://clerk.com/docs/reference/backend-api/tag/Users#operation/LockUser) Backend API operation. 
 
-## Usecases
+### Usecases
 
-### "Unlock button"
+#### "Unlock button"
 
 Your custom sign-in page could expose a button or link that allows the user to request an unlock token when they are locked out of their account.
 
@@ -19,7 +19,7 @@ Your custom sign-in page could expose a button or link that allows the user to r
 * The unlock token can be sent to the user via email or SMS.
 * After successful entry of the unlock token, your app's backend can issue an unlock request to the Clerk Backend API.
 
-### Send an unlock request to an admin
+#### Send an unlock request to an admin
 
 If your app supports users submitting admin requests, it could expose a way of requesting an admin unlock.
 
