User Lockout docs (#474)
Co-authored-by: Mark Pitsilos <mark.pitsilos@gmail.com>
Co-authored-by: cmayoracurzio <carlos.mayora.curzio@gmail.com>
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>
Co-authored-by: singhjatin297 <78216862+singhjatin297@users.noreply.github.com>
Co-authored-by: Konstantinos Pittas <konstantinos@clerk.dev>
Co-authored-by: Roy Anger <roy@royanger.com>
Co-authored-by: jshek-clerk <114083605+jshek-clerk@users.noreply.github.com>
Co-authored-by: JustMendex <40322913+JustMendex@users.noreply.github.com>

--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -98,3 +98,27 @@ const signIn = await client.signIn.create({
   .catch((err) => console.error("error", err.errors[0].message));
 ```
 </CodeBlockTabs>
+
+## Special error cases
+
+### User locked
+
+If you have [Account Lockout](/docs/security/user-lock-guide) enabled on your instance and the user reaches the maximum allowed attempts for password or backup code verification, you will receive an HTTP status of 403 (Forbidden) and the following error payload:
+
+
+```json
+{
+  "errors": [
+    {
+      "message": "Account locked",
+      "long_message": "Your account is locked. You will be able to try again in 30 minutes. For more information, please contact support.",
+      "code": "user_locked",
+      "meta": {
+        "duration_in_seconds": 1800
+      }
+    }
+  ]
+}
+```
+
+The remaining duration will vary [depending on your configuration](/docs/security/customize-user-lockout). You can opt to render the error message returned as-is or format the supplied `duration_in_seconds` as per your liking.
