--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -89,6 +89,7 @@ Below is an example of a webhook payload for a `user.created` event:
     "gender": "",
     "id": "user_29w83sxmDNGwOuEthce5gg56FcC",
     "last_name": "Example",
+    "locked": false,
     "last_sign_in_at": 1654012591514,
     "object": "user",
     "password_enabled": true,
