update title of quickstarts context

--- a/docs/quickstarts/overview.mdx
+++ b/docs/quickstarts/overview.mdx
@@ -1,4 +1,4 @@
 ---
-title: Quickstarts & Tutorials
+title: Quickstarts
 description: Check out our Clerk getting started guides and tutorials.
 ---
