--- a/docs/troubleshooting/overview.mdx
+++ b/docs/troubleshooting/overview.mdx
@@ -9,7 +9,7 @@ We hope that our documentation is thorough and transparent enough that you won't
 
 Refer to the [Backend API](https://clerk.com/docs/reference/backend-api) and Frontend API reference docs for questions about object structures, requests, and responses.
 
-Are you looking for a place to get started? Check out our [Quickstarts & Tutorials](/docs/quickstarts/overview) section.
+Are you looking for a place to get started? Check out our [Quickstarts](/docs/quickstarts/overview) section.
 
 ## Discord community
 
