--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -4,7 +4,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 ---
 
 <TutorialHero 
-  framework="nextjs"
+  quickstart="nextjs"
   beforeYouStart={[
     {
       title: "Set up a Clerk application",
