remove use of 'API' from SDK reference overview

--- a/docs/references/overview.mdx
+++ b/docs/references/overview.mdx
@@ -1,4 +1,4 @@
 ---
-title: API & SDK Reference
-description: Learn about the Clerk APIs and the available SDKs.
+title: SDK References
+description: Learn about the Clerk and community SDK's available for integrating Clerk into your application.
 ---
