--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -31,11 +31,6 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 </TutorialHero>
 
 
-
-# Use Clerk with React
-
-Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application.
-
 <Steps>
 
 ### Set up a React application using Vite
@@ -88,8 +83,11 @@ Clerk's React SDK gives you access to prebuilt [components](/docs/components/ove
 
 ### Set environment keys
 
-Below is an example of an .env file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
+In your React project's root folder, you may have an `.env` file alongside `package.json` and other configuration files. If you don't see it, create it.
 
+Add the following code to your `.env.local` file to set your public and secret keys.
+
+**Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/), your keys should become visible by clicking on the eye icon.
 <InjectKeys>
 
 ```sh filename=".env"
@@ -100,7 +98,7 @@ VITE_CLERK_PUBLISHABLE_KEY={{pub_key}}
 
 ### Wrap your app in `<ClerkProvider />`
 
-The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/clerk-react'` at the top of your file. You will need to import your Publishable Key and provide it to your `<ClerkProvider />` using the `publishableKey` prop. 
+The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/clerk-react'` at the top of your `/src/main.tsx` file. You will need to import your Publishable Key and provide it to your `<ClerkProvider />` using the `publishableKey` prop. 
 
 
 ```tsx filename="src/main.tsx" {5, 7, 9-11, 15, 17}
@@ -123,9 +121,10 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
     </ClerkProvider>
   </React.StrictMode>,
 )
+```
 
 At this point, your application should use Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box. Start your React application via `npm run dev`, visit `http://localhost:5173`, and sign up to get access to your application. 
-```
+
 ### Embed the `<UserButton />` and `<SignInButton />`
 
 Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, completing the full authentication circle.The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) is an unstyled component that you can use to either create a basic button or to wrap around your styled button and turn it into a Sign In button.
