--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -159,7 +159,7 @@ If you removed the Vite boilerplate from `App.tsx` by copying and pasting the bo
 
 ## You're authenticated!
 
-Congratulations! Your app is now only available to authenticated users! But this is just the first step. If you would like to clone or investiage this application, please check out:
+Congratulations! Your app is now only available to authenticated users! But this is just the first step. If you would like to clone or investigate this application, please check out:
 
 * [Clerk + React Quickstart](https://github.com/clerk/clerk-react-quickstart)
 
