--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -35,7 +35,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 ### Set up a React application using Vite
 
-We don't recommend using `create-react-app` for scaffoling your new React application. Instead we recommend using Vite to setup your application. 
+Scaffold your new React application using [Vite](https://vitejs.dev/guide/#scaffolding-your-first-vite-project).
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
