--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -23,10 +23,10 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
     }
   ]}
 >
-- Set up a React app with Vite
 - Install `@clerk/clerk-react`
-- Set environment keys
+- Set up your environment keys
 - Wrap your React app in `<ClerkProvider />`
+- Protecting your pages
 - Embed the `<UserButton />` and `<SignInButton />`
 </TutorialHero>
 
