chore: address pr comments

--- a/docs/references/javascript/organization/membership-request.mdx
+++ b/docs/references/javascript/organization/membership-request.mdx
@@ -1,5 +1,5 @@
 ---
-title: Organization membership request
+title: Organization membership requests
 description: These are methods on the Organization class that allow you to manage the membership requests for an organization.
 ---
 
