--- a/docs/telemetry.mdx
+++ b/docs/telemetry.mdx
@@ -27,7 +27,7 @@ Examples of data we are interested in:
 - Usage of new features
 
 <Callout type="info">
-  **Note:** We regularly audit this list to ensure it is an accurate representation of the data we are collecting. To audit telemetry data sent from our SDKs yourself, you can set a `CLERK_TELEMETRY_DEBUG=1` environment variable in your application. In this mode, telemetry events are only logged to the console and not sent to Clerk.
+  We regularly audit this list to ensure it is an accurate representation of the data we are collecting. To audit telemetry data sent from our SDKs yourself, you can set a `CLERK_TELEMETRY_DEBUG=1` environment variable in your application. In this mode, telemetry events are only logged to the console and not sent to Clerk.
 </Callout>
 
 An example event looks like this:
@@ -65,7 +65,7 @@ We will never share with or sell telemetry data to third parties. The data is us
 ### Environment variables
 
 <Callout type="warning">
-  Note that the variable name might differ between frameworks. See the [framework specific instructions]() below.
+  Note that the variable name might differ between frameworks. See the [framework specific instructions](#framework-specific-instructions) below.
 </Callout>
 
 For meta-framework SDKs, you can opt-out of telemetry collection by setting the environment variable: 
@@ -85,7 +85,7 @@ If you are using `@clerk/clerk-react` directly, or using an SDK that doesn't hav
 ### Framework specific instructions
 
 <CodeBlockTabs options={["Next.js", "React", "Remix", "Gatsby", "JavaScript", "Chrome Extension", "Expo"]}>
-```tsx
+```env filename=".env.local"
 NEXT_PUBLIC_CLERK_TELEMETRY_DISABLED=1
 ```
 
@@ -93,11 +93,11 @@ NEXT_PUBLIC_CLERK_TELEMETRY_DISABLED=1
 <ClerkProvider telemetry={false} />
 ```
 
-```tsx
+```env filename=".env.local"
 CLERK_TELEMETRY_DISABLED=1
 ```
 
-```tsx
+```env filename=".env.local"
 GATSBY_CLERK_TELEMETRY_DISABLED=1
 ```
 
