--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -87,7 +87,7 @@ In your React project's root folder, you may have an `.env` file alongside `pack
 
 Add the following code to your `.env.local` file to set your public and secret keys.
 
-**Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/), your keys should become visible by clicking on the eye icon.
+**Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys), you can copy your publishable key below.
 <InjectKeys>
 
 ```sh filename=".env"
