Revised based on feedback

--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -25,9 +25,11 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 >
 - Install `@clerk/clerk-react`
 - Set up your environment keys
+- Import the Publishable Key
 - Wrap your React app in `<ClerkProvider />`
-- Protecting your pages
-- Embed the `<UserButton />` and `<SignInButton />`
+- Protecting your content
+- Embed the `<SignInButton />` and `<SignOutButton />`
+- Deploy your application
 </TutorialHero>
 
 
@@ -96,12 +98,35 @@ VITE_CLERK_PUBLISHABLE_KEY={{pub_key}}
 
 </InjectKeys>
 
+### Import the Publishable Key
+
+You will need to import your Publishable Key into your application. You can add an `if` statement to check that it is imported and that it exists. This will prevent running the application without the Publishable Key, and will also prevent TypeScript errors.
+
+```tsx filename="src/main.tsx" {6-7, 9-11}
+import React from 'react'
+import ReactDOM from 'react-dom/client'
+import App from './App.tsx'
+import './index.css'
+
+// Import your publishable key
+const PUBLISHABLE_KEY = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY
+
+if (!PUBLISHABLE_KEY) {
+  throw new Error("Missing Publishable Key")
+}
+
+ReactDOM.createRoot(document.getElementById('root')!).render(
+  <React.StrictMode>
+      <App />
+  </React.StrictMode>,
+)
+```
+
+
 ### Wrap your app in `<ClerkProvider />`
 
-The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/clerk-react'` at the top of your `/src/main.tsx` file. You will need to import your Publishable Key and provide it to your `<ClerkProvider />` using the `publishableKey` prop. 
-
-
-```tsx filename="src/main.tsx" {5, 7, 9-11, 15, 17}
+The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/clerk-react'` at the top of your `/src/main.tsx` file. 
+```tsx filename="src/main.tsx" {16, 18}
 import React from 'react'
 import ReactDOM from 'react-dom/client'
 import App from './App.tsx'
@@ -124,28 +149,23 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 )
 ```
 
-At this point, your application should use Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box. Start your React application via `npm run dev`, visit `http://localhost:5173`, and sign up to get access to your application. 
+## Protecting your content
 
-### Embed the `<UserButton />` and `<SignInButton />`
+You can use the `<SignedIn />` and `<SignedOut />` control components to restrict access to content, or even whole pages. The `<SignedIn />` component requires the user be signed in to view the content inside the tags. The `<SignedOut />` components reuires the user be signed out. Add some basic content and wrap some of with the `<SignedOut />` component and other content with the `<SignedIn />` component. 
 
-Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, completing the full authentication circle. The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) is an unstyled component that you can use to either create a basic button or to wrap around your styled button and turn it into a Sign In button.
-
-Lastly you will use the [`<SignedIn />`](/docs/components/control/signed-in) and [`<SignedOut />`](/docs/components/control/signed-out) control components. These will allow you to render the `<UserButton />` only to users who are signed in and `<SignInButton />` only to users who are signed out.
-
-Add the following anywhere inside `<ClerkProvider />` in your app. First add `import { UserButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react";` to the top of your file. Then add the following somewhere inside of your application -- a header area is a great place. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out.
 
 ```tsx filename="src/App.tsx {1, 7-12}
-import { SignInButton, SignedIn, SignedOut, UserButton } from "@clerk/clerk-react"
+import { SignedOut, SignedIn } from "@clerk/clerk-react"
 
 function App() {
 
   return (
     <div>
       <SignedOut>
-        <SignInButton />
+        <p>This content is public</p>
       </SignedOut>
       <SignedIn>
-        <UserButton afterSignOutUrl="/" />
+        <p>This content ic private</p>
       </SignedIn>
     </div>
   )
@@ -154,8 +174,40 @@ function App() {
 export default App
 ```
 
-If you removed the Vite boilerplate from `App.tsx` by copying and pasting the boce, you probably want to also delete `src/App.css` and `src/assets/react.svg`.
+At this point, your application should use Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box. Start your React application via `npm run dev`, visit `http://localhost:5173`, and sign up to get access to your application. 
 
+### Embed the `<SignInButton />` and `<SignOutButton />`
+
+Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) and [`<SignOutButton />`](/docs/components/unstyled/sign-out-button) are unstyled components that you can use to either create a basic button or to wrap around your styled button and turn it into a Sign In or Sign Out button.
+
+Add the following anywhere inside `<ClerkProvider />` in your app. First add `import { SignOutButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react";` to the top of your file. Then add the `<SignInButton />` inside of the `<SignedOut />` tags and the `<SignOutButton />` inside of the `<SignedIn />` tags. Restart your application
+
+```tsx filename="src/App.tsx {1, 7-14}
+import { SignOutButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react"
+
+function App() {
+
+  return (
+    <div>
+      <SignedOut>
+        <SignInButton />
+        <p>This content is public</p>
+      </SignedOut>
+      <SignedIn>
+        <SignOutButton afterSignOutUrl="/" />
+        <p>This content ic private</p>
+      </SignedIn>
+    </div>
+  )
+}
+
+export default App
+```
+You can now visit your application and use the buttons to sign-in to your application and see the protected content and the protected `<SignOutButton />`
+
+### Deploy your application
+
+You're ready to [deploy your app to production](/docs/deployments/overview) and welcome new users!
 </Steps>
 
 ## You're authenticated!
@@ -164,14 +216,9 @@ Congratulations! Your app is now only available to authenticated users! But this
 
 * [Clerk + React Quickstart](https://github.com/clerk/clerk-react-quickstart)
 
-## Add routing to your Clerk Powered application
+## Next step: Add routing with React Router
 
 React has many options for handling routing and you are free to choose the option that suits you best. If you would like to learn how to integrate React Router's latest Data API based router (nicknamed Data Router) please see the [Add React Router to your Clerk Powered application](/docs/references/react/add-react-router) guide. 
-
-
-### Next steps
-
-Now that you have an application integrated with Clerk, you will want to read the following documentation:
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
