--- a/docs/references/react/add-react-router.mdx
+++ b/docs/references/react/add-react-router.mdx
@@ -3,6 +3,33 @@ title: Add React Router to your Clerk powered React application
 description: Learn how to add React Router to your React application using their Data API router.
 ---
 
+<TutorialHero 
+  quickstart="react"
+  exampleRepo={[ 
+    {
+      title: "React Quickstart Repo",
+      link: "https://github.com/clerk/clerk-react-quickstart"
+      
+    }
+  ]}
+  beforeYouStart={[
+    {
+      title: "Set up a Clerk application",
+      link: "https://clerk.com/docs/quickstarts/setup-clerk"
+    },
+    {
+      title: "Add authentication and user management to your React app with Clerk",
+      link: "https://clerk.com/docs/quickstarts/react"
+    },
+  ]}
+>
+- Install `react-router-dom`
+- Create components for your routes
+- Create layouts
+- Wire layouts and routes up with `createBrowserRouter`
+</TutorialHero>
+
+
 
 # Add React Router to your Clerk powered React application
 
