Update metadata to add 8kb limit

--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -13,6 +13,10 @@ Metadata allows for custom data to be saved on the [`User` object](/docs/users/o
 | Public | Read access | Read & write access |
 | Unsafe | Read & write access | Read & write access |
 
+<Callout type="warning">
+    Metadata is limited to **8kb** maximum.
+</Callout>
+
 ## Private metadata
 
 Private metadata is only accessible by the backend, which makes this useful for storing sensitive data that you don't want to expose to the frontend. For example, you could store a user's Stripe customer ID.
