--- a/docs/custom-flows/use-sign-up.mdx
+++ b/docs/custom-flows/use-sign-up.mdx
@@ -46,7 +46,7 @@ The more involved example below shows an approach for creating a custom form for
 ```jsx
 import { useState } from "react";
 import { useSignUp } from "@clerk/nextjs";
-import { useRouter } from "next/router";
+import { useRouter } from "next/navigation";
 
 export default function SignUpForm() {
   const { isLoaded, signUp, setActive } = useSignUp();
@@ -176,7 +176,7 @@ The more involved example below shows an approach for creating a custom form for
 ```jsx
 import { useState } from "react";
 import { useSignIn } from "@clerk/nextjs";
-import { useRouter } from "next/router";
+import { useRouter } from "next/navigation";
 
 export default function SignInForm() {
   const { isLoaded, signIn, setActive } = useSignIn();
