chore: Add deprecation for sms create to backend package
This endpoint was deprecated. Technically its still available in the
backend package but with a warning that the endpoint is no longer
working.

It will be completly removed in v5.

The Ruby SDK method was already marked as deprecated.

- Removed examples of creating sms.
- Changed examples the included sms creation to now use email creation.
- Removed the references/backend/sms-message/create-sms-message page.
- Added a deprecation warning for createSMS in the  references/backend/overview.

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -162,10 +162,8 @@ Email operations are exposed under `clerkClient.emails`. The following methods a
 
 - [`createEmail()`](/docs/references/backend/emails/create-email)
 
-## SMS message operations
+## SMS message operations (deprecated)
 
-SMS message operations are exposed under `clerkClient.smsMessages`. The following methods are available:
-
-### Create
-
-- [`createSMSMessage()`](/docs/references/backend/sms-message/create-sms-message)
+<Callout type="danger">
+  This operation is now deprecated. Clerk no longer supports sending SMS messages through Clerk's backend API.
+</Callout>
