--- a/docs/references/go/other-examples.mdx
+++ b/docs/references/go/other-examples.mdx
@@ -5,33 +5,7 @@ description: Explore different examples of how to utilize Clerk with Go.
 
 # Examples
 
-Below are some various code snippets of what you can do from your backend with Clerk. Look at the [API reference](/docs/references/backend/overview) for a full list of requests you can make from your backend.
-
-## Transactional SMS
-
-Send an SMS to a user after they sign up.
-
-```go
-var client clerk.Client
-
-func afterSignup(user *clerk.User) error {
-	if user.PrimaryPhoneNumberID == nil {
-		return nil
-	}
-	
-	message := clerk.SMSMessage{
-		Message:       "Thanks for joining!",
-		PhoneNumberID: *user.PrimaryPhoneNumberID,
-	}
-
-	_, err := hd.client.SMS().Create(message)
-	if err != nil {
-		return err
-	}
-	
-	return nil	
-}
-```
+Below is a code snippet showing what you can do from your backend with Clerk. Look at the [API reference](/docs/references/backend/overview) for a full list of requests you can make from your backend.
 
 ## Update metadata
 
