--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -158,10 +158,10 @@ const Clerk = require('@clerk/clerk-sdk-node/cjs/instance').default;
 
 const clerkClient = Clerk({ secretKey: '{{secret}}' });
 
-clerkClient.smsMessages
-  .createSMSMessage({ message, phoneNumberId })
-  .then((smsMessage) => console.log(smsMessage))
-  .catch((error) => console.error(error));
+clerkClient.emails
+    .createEmail({ fromEmailName, subject, body, emailAddressId })
+    .then((email) => console.log(email))
+    .catch((error) => console.error(error));
 ```
 </CodeBlockTabs>
 
